--- a/PrabhjeetBookStore/PrabhjeetBookStore.csproj
+++ b/PrabhjeetBookStore/PrabhjeetBookStore.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -16,11 +16,18 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\PrabhjeetBooks.DataAccess\PrabhjeetBooks.DataAccess.csproj" />
     <ProjectReference Include="..\PrabhjeetBooks.Models\PrabhjeetBooks.Models.csproj" />
+    <ProjectReference Include="..\PrabhjeetBooks.Utility\PrabhjeetBooks.Utility.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Controllers\" />
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
