--- a/PrabhjeetBookStore/appsettings.json
+++ b/PrabhjeetBookStore/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=PrabhjeetBookStore;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=PrabhjeetBookStore;Trusted_Connection=True;MultipleActiveResultSets=true"//changed the database to PrabhjeetBookStore .
   },
   "Logging": {
     "LogLevel": {
